--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -11,7 +11,7 @@ body {
   --m2: 8px;
   --m4: 16px;
   --icon-size: 24px;
-  --breadcrumb-min-width: 420px;
+  --breadcrumb-min-width: 450px;
 }
 
 #footer {
@@ -85,42 +85,12 @@ button.actionButton {
   color: white !important;
   margin-top: 5px;
 }
-
-// .gearAddButton button {
-//   overflow: visible!important;
-// }
-
-// .gearAddButton .gpt-fullgear {
-//   // color: @complementary_color!important;
-//   font-size: 40px !important;
-//   height: 40px !important;
-//   width: 40px !important;
-//   text-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px;
-// }
-// .gearAddButton svg {
-//   color: rgb(255, 255, 255) !important;
-//   height: 24px !important;
-//   width: 24px !important;
-//   position: absolute !important;
-//   top: 11px !important;
-//   left: 12px !important;
-//   pointer-events: none;
-// }
-// .gearAddLabel {
-//   font-size: 12px;
-//   text-align: center;
-//   position: absolute;
-//   width: 24px !important;
-//   height: 24px !important;
-//   top: 0px;
-//   color: white !important;
-//   left: 4px;
-//   pointer-events: none;
-//   z-index: 10;
-// }
 .gearThumbButton {
   width: 120px !important;
   height: 120px !important;
+}
+.gearThumbButton:hover {
+  background-color: inherit!important;
 }
 .gearThumbButton button {
   overflow: visible;
@@ -152,7 +122,8 @@ button.actionButton {
 }
 
 .helpIcon {
-  margin-top: 40px;
+  display: flex;
+  align-items: center;
   margin-left: 10px;
   float: left;
   font-size: 15px;
@@ -216,18 +187,18 @@ button.actionButton {
   white-space: nowrap;
 }
 
-.listStyle {
-  width: 100% !important;
-  > div:first-of-type {
-    width: 95%;
-    > div {
-      width: 100% !important;
-      > div:first-of-type {
-        width: 95% !important;
-      }
-    }
-  }
-}
+// .listStyle {
+//   width: 100% !important;
+//   > div:first-of-type {
+//     width: 95%;
+//     > div {
+//       width: 100% !important;
+//       > div:first-of-type {
+//         width: 95% !important;
+//       }
+//     }
+//   }
+// }
 
 .tabContainer {
   padding: 10;
@@ -537,4 +508,8 @@ button.actionButton {
 
 .add-rule {
   min-width: '56px';
+}
+
+.MuiListItem-root.Mui-selected {
+  color: @primary_color;
 }
