#136 Moving HLS to flexlaout. Styling

--- a/webapp/css/colors.less
+++ b/webapp/css/colors.less
@@ -1,8 +1,16 @@
-@primary_color: rgb(242, 61, 122);
-@secondary_color: rgb(204, 33, 90);
+@primary_color: #f67700d2;
+@secondary_color: #f67700;
 @complementary_color:rgb(84, 58, 115);
 @background_color_body_0: rgb(195, 195, 195);
 @background_color_body_50: rgb(195, 195, 195);
 @background_color_body_73: rgb(195, 195, 195);
 @background_color_body_100: rgb(195, 195, 195);
 @background_color_widget: rgb(255,255,255);
+
+@box_color: #323232;
+@color-link: #b9c680;
+
+@color-light: #616161;
+@color-regular: #424242;
+@color-dark: #212121;
+@color-white: white;
