--- a/webapp/css/material.less
+++ b/webapp/css/material.less
@@ -7,6 +7,7 @@ label {
 input[type="text"], input[type="number"]{
   box-shadow: none!important;
   border-radius:0px!important;
+  color: white!important
 }
 
 div.MuiExpansionPanelSummary-root {	
@@ -18,11 +19,7 @@ div.MuiExpansionPanelSummary-root {
     font-size: 1em;	
     color    : grey;	
   }	
-}	
-
-div.MuiPaper-root {	
-  color: black;	
-}	
+}
 
 div.MuiCollapse-container .MuiCollapse-wrapper,	
 div.MuiExpansionPanelSummary-root {	
@@ -33,8 +30,9 @@ div.MuiExpansionPanel-root.Mui-expanded {
 }	
 .MuiExpansionPanel-root {	
   margin: 2px;	
-}	
+}
 
+label.MuiInputLabel-root
 .MuiInput-root {	
   color      : #fff;	
   cursor     : text;	
@@ -53,7 +51,7 @@ div.MuiExpansionPanel-root.Mui-expanded {
     border                     : none;	
     outline                    : none;	
     background-color           : rgba(0, 0, 0, 0);	
-    color                      : rgba(0, 0, 0, 0.87);	
+    color                      : rgba(255, 255, 255, 0.87);	
     cursor                     : inherit;	
     font                       : inherit;	
     opacity                    : 1;	
@@ -75,7 +73,7 @@ div.MuiExpansionPanel-root.Mui-expanded {
 
 label.MuiInputLabel-root, label.MuiFormLabel-root{	
   font-weight: bold;	
-  color: rgba(0, 0, 0, 0.3);	
+  color: rgba(255, 255, 255, 0.7);	
   padding: 4px	
 }	
 
