--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -3,7 +3,7 @@
 html,
 body {
   height: 100%;
-  background: white !important;
+  background: @color-dark !important;
   font-size: 16px;
 }
 
@@ -96,7 +96,7 @@ button.actionButton {
   overflow: visible;
 }
 .gearThumbButton .gpt-fullgear {
-  color: @complementary_color!important;
+  color: @color-light!important;
   font-size: 100px !important;
   height: 100px !important;
   width: 100px !important;
@@ -135,7 +135,7 @@ button.actionButton {
 }
 
 .breadcrumb {
-  background-color: #eeeeee;
+  background-color: @color-light;
   height: 100px;
   display: flex;
   align-items: center;
@@ -254,17 +254,17 @@ button.actionButton {
   margin-top: 43px;
   margin-right: 5px;
   font-size: 11px;
-  color: @complementary_color;
+  color: @secondary_color;
 }
 
 .spinner-container {
-  color: @complementary_color!important;
+  color: @secondary_color!important;
   p {
-    color: @complementary_color !important;
+    color: @secondary_color !important;
   }
 }
 .listIcon {
-  color: @complementary_color!important;
+  color: @secondary_color!important;
 }
 
 .listButtonLarge {
@@ -299,7 +299,7 @@ button.actionButton {
 
 .rst__rowContents {
   background: transparent;
-  color: @complementary_color;
+  color: @secondary_color;
 
   cursor: pointer;
   box-shadow: none;
