#136 Move python console to flexlayout widgets

--- a/webapp/css/flexlayout.less
+++ b/webapp/css/flexlayout.less
@@ -66,8 +66,6 @@
   
         input {
             width: 100%;
-            font-style: italic;
-            font-weight: 200;
         }
         #pythonConsoleOutput {
             padding: 0;
@@ -146,6 +144,7 @@
         padding: 0;
         font-weight: normal;
         color: #b9b9b9;
+        margin-left: @spacing;
     }
   
     // Thin white tab icons
@@ -209,5 +208,4 @@
     .node-legend {
       visibility: visible; 
     }
-  }
-  
+}
