--- a/webapp/css/material.less
+++ b/webapp/css/material.less
@@ -7,7 +7,8 @@ label {
 input[type="text"], input[type="number"]{
   box-shadow: none!important;
   border-radius:0px!important;
-  color: white!important
+  color: white!important;
+  font-size: inherit;
 }
 
 div.MuiExpansionPanelSummary-root {	
