--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -14,6 +14,7 @@ body {
   --breadcrumb-min-width: 450px;
 }
 
+@flexlayout-widget-border: 8px;
 #footer {
   z-index: 2 !important;
 }
@@ -27,6 +28,14 @@ body {
   height: 100% !important;
 }
 
+.position-toolbar {
+  top: 0px;
+}
+#controlpanel {
+  margin-top: @flexlayout-widget-border;
+  top: 0%!important;
+  width: 97%!important;
+}
 button.actionButton {
   font-size: 15px;
   margin: 10px;
