#139 Move topbar and tabs-bar to Geppetto topbar component. Move simulate button to new design

--- a/webapp/css/colors.less
+++ b/webapp/css/colors.less
@@ -1,5 +1,5 @@
-@primary_color: #f67700d2;
-@secondary_color: #f67700;
+@primary_color: #37ABC8d2;
+@secondary_color: #37ABC8;
 @complementary_color:rgb(84, 58, 115);
 @background_color_body_0: rgb(195, 195, 195);
 @background_color_body_50: rgb(195, 195, 195);
