#139 Flexlayout, redux, topbar and drawer changes as per new mockups

--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -196,19 +196,6 @@ button.actionButton {
   white-space: nowrap;
 }
 
-// .listStyle {
-//   width: 100% !important;
-//   > div:first-of-type {
-//     width: 95%;
-//     > div {
-//       width: 100% !important;
-//       > div:first-of-type {
-//         width: 95% !important;
-//       }
-//     }
-//   }
-// }
-
 .tabContainer {
   padding: 10;
   height: 500;
@@ -223,6 +210,7 @@ button.actionButton {
 
 .netpyneCheckbox {
   margin: 5px 0px;
+  color: white;
   label {
     font-weight: normal;
   }
@@ -525,4 +513,8 @@ button.actionButton {
 
 div.flexlayout__layout{
   top: 0;
+}
+
+#simple-popper{
+  z-index: 1500;
 }
