#139 Hide python console on border

--- a/webapp/css/flexlayout.less
+++ b/webapp/css/flexlayout.less
@@ -132,6 +132,7 @@
     
             font-size: @font-size-panels;
         }
+        visibility: hidden;
         border: none;
         margin: 0;
         margin-right: @tab-spacing;
