#143 Style tabs as per Figma mockups

--- a/webapp/css/flexlayout.less
+++ b/webapp/css/flexlayout.less
@@ -16,7 +16,7 @@
 
 @spacing: 8px;
 
-@inner-layout-padding: @gutter / 2;
+@inner-layout-padding: 8px 8px 0px 8px;
 
 @explorer-tooltip-z-index: 3;
 @explorer-tooltip-top: -50px !important;
