--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -126,7 +126,7 @@ button.actionButton {
   pointer-events: none;
   z-index: 10;
 }
-.breadcrumbButton button {
+.breadcrumbButtony button {
   background-color: #444444 !important;
 }
 
@@ -143,14 +143,14 @@ button.actionButton {
   color: @primary_color;
 }
 
-.breadcrumb {
-  background-color: @color-light;
-  height: 100px;
+.breadcrumby {
+  background-color: @color-regular;
   display: flex;
   align-items: center;
   overflow: visible;
   justify-content: flex-start;
-  min-width: var(--breadcrumb-min-width);
+  margin: 0px;
+  border-radius: 4px;
 }
 
 .hiddenModal {
@@ -220,7 +220,7 @@ button.actionButton {
 }
 
 .thumbnails {
-  width: 40%;
+  width: 100%;
   overflow: visible;
   float: left;
 }
