#143 Styling borders, fixing cog icon

--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -13,7 +13,7 @@ body {
   --icon-size: 24px;
   --breadcrumb-min-width: 450px;
 }
-
+@gutter: 16px;
 @flexlayout-widget-border: 8px;
 #footer {
   z-index: 2 !important;
@@ -151,6 +151,7 @@ button.actionButton {
   justify-content: flex-start;
   margin: 0px;
   border-radius: 4px;
+  padding: @gutter / 2;
 }
 
 .hiddenModal {
