#144 Make filter scrollbar same theme

--- a/webapp/css/flexlayout.less
+++ b/webapp/css/flexlayout.less
@@ -222,3 +222,14 @@
       visibility: visible; 
     }
 }
+
+
+.MuiAutocomplete-listbox {
+    &::-webkit-scrollbar-thumb {
+        background: @secondary_color;
+        border-radius: @panelradius;
+    }
+    &::-webkit-scrollbar {
+        width: @gutter / 2;
+    }
+}
