#144 Add copy to clipboard for rule

--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -151,7 +151,8 @@ button.actionButton {
   justify-content: flex-start;
   margin: 0px;
   border-radius: 4px;
-  padding: @gutter / 2;
+  margin: @gutter / 2;
+  flex-wrap: wrap;
 }
 
 .hiddenModal {
