--- a/webapp/css/colors.less
+++ b/webapp/css/colors.less
@@ -1,16 +1,16 @@
-@primary_color: #37ABC8d2;
-@secondary_color: #37ABC8;
-@complementary_color:rgb(84, 58, 115);
-@background_color_body_0: rgb(195, 195, 195);
-@background_color_body_50: rgb(195, 195, 195);
-@background_color_body_73: rgb(195, 195, 195);
-@background_color_body_100: rgb(195, 195, 195);
+@import "variables";
+
+@primary_color: @primaryColor;
+@secondary_color: @secondaryColor;
+
+
+
+
+
+
+@complementary_color:@bgLight;
+@background_color_body_0: @bgRegular;
+@background_color_body_50: @bgRegular;
+@background_color_body_73: @bgRegular;
+@background_color_body_100: @bgRegular;
 @background_color_widget: rgb(255,255,255);
-
-@box_color: #323232;
-@color-link: #b9c680;
-
-@color-light: #616161;
-@color-regular: #424242;
-@color-dark: #212121;
-@color-white: white;
