--- a/webapp/css/material.less
+++ b/webapp/css/material.less
@@ -1,4 +1,4 @@
-@spacing: 16px;
+@import 'variables';
 
 label {
   margin-top: 0px;
@@ -24,7 +24,7 @@ div.MuiExpansionPanelSummary-root {
 
 div.MuiCollapse-container .MuiCollapse-wrapper,	
 div.MuiExpansionPanelSummary-root {	
-  padding: @spacing;	
+  padding: @tabSpacing;	
 }	
 div.MuiExpansionPanel-root.Mui-expanded {	
   margin: 2px;	
