--- a/webapp/css/tree.less
+++ b/webapp/css/tree.less
@@ -620,7 +620,7 @@
     box-sizing: border-box;
   }
   .rst__placeholder::before {
-    border: 3px dashed @primary_color;
+    border: 3px dashed @primaryColor;
     content: '';
     position: absolute;
     top: 5px;
@@ -782,7 +782,7 @@
 }
 
 .rst__rowContents:hover {
-  color: @secondary_color !important;
+  color: @secondaryColor !important;
 }
 
 .rst__rowTitle {
@@ -820,10 +820,10 @@
 }
 
 .nodeSelected:hover {
-  color: @primary_color;
+  color: @primaryColor;
 }
 
 .nodeFound {
-  color: @secondary_color;
+  color: @secondaryColor;
 
 }
