--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -462,3 +462,13 @@ div.flexlayout__layout{
 #simple-popper{
   z-index: 1500;
 }
+
+
+.image-icon {
+  width: 100%;
+  filter: brightness(0) invert(1);
+  &.selected,
+  &:hover {
+    filter: none;
+  }
+}
