--- a/webapp/css/flexlayout.less
+++ b/webapp/css/flexlayout.less
@@ -85,6 +85,9 @@
       
         &.flexlayout__tab_button--unselected {
             background-color: @bgDarkest;
+            .flexlayout__tab_button_content {
+                color: @textColor;
+            }
         }
     }
 
@@ -120,12 +123,10 @@
   
     .flexlayout__tab_button_content {
         margin-top: unset;
-        color: @secondaryColor;
         font-family: @font;
         font-size: @fontSizePanels;
         padding: 0;
         font-weight: normal;
-        color: #b9b9b9;
     }
   
     .flexlayout__tab_button_trailing {
