--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -472,3 +472,9 @@ div.flexlayout__layout{
     filter: none;
   }
 }
+
+.menu-caret{
+  margin-left: 1em;
+  color: @bgLight;
+}
+.menu-item-label { min-width: 10em }
