#147 Get Splash page while model is loading

--- a/webapp/geppetto.ejs
+++ b/webapp/geppetto.ejs
@@ -45,8 +45,7 @@ $content
 
 <div id="mainContainer">
 	<div id="loadingText" style="font-family: consolas;margin: 0px;">
-		<img src="geppetto/build/splash.png" style="max-width: 90%;margin: 0px;position: absolute;display: inline-block;text-align: center;vertical-align: middle;top: 2%;left: 5%;" alt="" onerror='document.getElementById("loadingMessage").style.display="block"' >
-		<span id="loadingMessage" style="display : none; margin-top: 50px" >LOADING... [~3MB]</span>
+		<img src="geppetto/build/static/splash.png" style="max-width: 90%;margin: 0px;position: absolute;display: inline-block;text-align: center;vertical-align: middle;top: 2%;left: 5%;" alt="" onerror='document.getElementById("loadingMessage").style.display="block"' >
 	</div>
     <div id="controls" class="noSelection">
 		<div id="DownloadProjectButton" class="row"></div>
