--- a/webapp/geppetto.ejs
+++ b/webapp/geppetto.ejs
@@ -44,8 +44,8 @@ $content
 
 
 <div id="mainContainer">
-	<div id="loadingText" style="font-family: consolas;margin: 0px;">
-		<img src="geppetto/build/static/splash.png" style="max-width: 90%;margin: 0px;position: absolute;display: inline-block;text-align: center;vertical-align: middle;top: 2%;left: 5%;" alt="" onerror='document.getElementById("loadingMessage").style.display="block"' >
+	<div id="loadingText" style="font-family: consolas;margin: 0px;width: 100%;height: 100%;text-align: center;">
+		<img src="geppetto/build/static/splash.png" style="max-width: 50%;text-align: center;" alt="" onerror='document.getElementById("loadingMessage").style.display="block"' >
 	</div>
     <div id="controls" class="noSelection">
 		<div id="DownloadProjectButton" class="row"></div>
