--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -472,3 +472,11 @@ div.flexlayout__layout{
 #plot > div>div>svg{
   fill: white;
 }
+
+.secondary {
+  color: @primaryColor;
+}
+
+.disabled {
+  color: @bgDarkest!important;
+}
