#152 add tutorials to topbar

--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -448,6 +448,10 @@ div.flexlayout__layout{
   &:hover {
     filter: none;
   }
+  &.highlight {
+    border: 1px solid @primaryColor;
+    border-radius: 4px;
+  }
 }
 
 .menu-caret{
