Renamed ExpansionPanel (Material UI deprecated)

--- a/webapp/css/material.less
+++ b/webapp/css/material.less
@@ -12,7 +12,7 @@ input[type="text"], input[type="number"]{
   font-size: inherit;
 }
 
-div.MuiExpansionPanelSummary-root {	
+div.MuiAccordionSummary-root {	
   h2 {	
     font-size: 1em;	
   }	
@@ -24,13 +24,13 @@ div.MuiExpansionPanelSummary-root {
 }
 
 div.MuiCollapse-container .MuiCollapse-wrapper,	
-div.MuiExpansionPanelSummary-root {	
+div.MuiAccordionSummary-root {	
   padding: @tabSpacing;	
 }	
-div.MuiExpansionPanel-root.Mui-expanded {	
+div.MuiAccordion-root.Mui-expanded {	
   margin: 2px;	
 }	
-.MuiExpansionPanel-root {	
+.MuiAccordion-root {	
   margin: 2px;	
 }
 
