--- a/webapp/css/flexlayout.less
+++ b/webapp/css/flexlayout.less
@@ -6,8 +6,6 @@
     border-right: none!important;
     background-color: transparent;
     top: 0px;
-    margin-top: @gutter / 2;
-    margin-bottom: @gutter / 2;
     border-top: none;
   
     a {
@@ -56,7 +54,7 @@
         border-radius: 0px @radius @radius @radius;
     }
     .flexlayout__tabset-selected {
-        background-color: transparent;//color-light
+        background-color: @bgDarker;//color-light
     }
     .flexlayout__border_inner_bottom {
         position: fixed;
