Small graphical improvements

--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -42,6 +42,12 @@ body {
   // width: 97%!important;
   height: calc(100% - 24px)!important;
   width: calc(100% - 16px)!important;
+  div.griddle {
+    td, th {
+      background-color: rgba(@bgLight, 0.7);
+    }
+  }
+ 
 }
 button.actionButton {
   font-size: 15px;
