--- a/webapp/css/flexlayout.less
+++ b/webapp/css/flexlayout.less
@@ -58,7 +58,7 @@
     }
     .flexlayout__border_inner_bottom {
         position: fixed;
-        bottom: 0;
+        bottom: -100px; 
         left: 0;
         padding-left: @gutter / 2;
         border-top-right-radius: @radius;
