--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -1,6 +1,6 @@
 @import "colors";
-@import (css) url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700&display=swap');
-
+@import (css)
+  url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700&display=swap");
 
 html,
 body {
@@ -29,7 +29,7 @@ body {
   overflow: auto;
   height: 100%;
 }
-#mainContainer>div {
+#mainContainer > div {
   height: 100% !important;
 }
 
@@ -40,14 +40,17 @@ body {
   margin-top: @flexlayout-widget-border;
   // top: 0%!important;
   // width: 97%!important;
-  height: calc(100% - 24px)!important;
-  width: calc(100% - 16px)!important;
+  height: calc(100% - 24px) !important;
+  width: calc(100% - 16px) !important;
   div.griddle {
-    td, th {
+    td,
+    th {
       background-color: rgba(@bgLight, 0.7);
     }
   }
- 
+}
+#ControlPanelButton {
+  background-color: @bgRegular !important;
 }
 button.actionButton {
   font-size: 15px;
@@ -56,7 +59,7 @@ button.actionButton {
   height: 120px;
   float: left;
   cursor: pointer;
-  overflow: visible!important;
+  overflow: visible !important;
   color: white;
   :hover {
     border-radius: 120px;
@@ -78,7 +81,7 @@ button.actionButton {
 }
 
 .rectangularActionButton button {
-  overflow: visible!important;
+  overflow: visible !important;
   width: 120px !important;
   height: 36px !important;
   border-radius: 25px;
@@ -112,7 +115,7 @@ button.actionButton {
   height: 120px !important;
 }
 .gearThumbButton:hover {
-  background-color: inherit!important;
+  background-color: inherit !important;
 }
 .gearThumbButton button {
   overflow: visible;
@@ -164,12 +167,12 @@ button.actionButton {
   background: transparent;
   justify-content: flex-start;
   margin: 0px;
-  padding: @gutter/2;
+  padding: @gutter / 2;
   border-radius: @radius;
   flex-wrap: wrap;
   font-size: 0.8rem;
   .MuiIcon-colorDisabled {
-    color: black
+    color: black;
   }
   .breadcrumb-spacer {
     text-align: center;
@@ -178,7 +181,6 @@ button.actionButton {
     margin-left: @gutter / 2;
   }
 }
-
 
 .hiddenModal {
   position: absolute !important;
@@ -200,6 +202,9 @@ button.actionButton {
   );
   background: linear-gradient(to bottom, #eaeaea 0%, #ececec 53%, #d6d6d6 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eaeaea', endColorstr='#d6d6d6',GradientType=0 );
+  button.squareB {
+    background-color: @bgRegular;
+  }
 }
 
 .tabContainer {
@@ -248,7 +253,7 @@ button.actionButton {
   color: white !important;
 }
 
-#logoBackground{
+#logoBackground {
   background-color: #eaeaea;
 }
 
@@ -331,17 +336,17 @@ button.actionButton {
 
 .flex-row {
   display: flex;
-  flex-direction: row; 
+  flex-direction: row;
   align-items: baseline;
   width: 100%;
 }
 
 .flex-row-icon {
-  flex: 0 0 4%; 
-  margin-right: var(--m2)!important;
-  width: var(--icon-size)!important;
-  height: var(--icon-size)!important;
-  padding: 0px!important;
+  flex: 0 0 4%;
+  margin-right: var(--m2) !important;
+  width: var(--icon-size) !important;
+  height: var(--icon-size) !important;
+  padding: 0px !important;
   z-index: 1500;
 }
 
@@ -407,7 +412,7 @@ button.actionButton {
 
 .no-z-index {
   label {
-    z-index: 0!important;
+    z-index: 0 !important;
   }
 }
 
@@ -416,9 +421,9 @@ button.actionButton {
 }
 
 .simple-icon {
-  width: var(--icon-size)!important;
-  height: var(--icon-size)!important;
-  padding: 0px!important;
+  width: var(--icon-size) !important;
+  height: var(--icon-size) !important;
+  padding: 0px !important;
 }
 
 .w-80 {
@@ -426,29 +431,27 @@ button.actionButton {
 }
 
 .mrg-2 {
-  margin: var(--m2)!important;
+  margin: var(--m2) !important;
 }
 .b-4 {
   bottom: var(--m4);
 }
 
-
 .add-rule {
-  min-width: '56px';
+  min-width: "56px";
 }
 
 .MuiListItem-root.Mui-selected {
   color: @primaryColor;
 }
 
-div.flexlayout__layout{
+div.flexlayout__layout {
   top: 0;
 }
 
-#simple-popper{
+#simple-popper {
   z-index: 1500;
 }
-
 
 .image-icon {
   width: 100%;
@@ -463,12 +466,13 @@ div.flexlayout__layout{
   }
 }
 
-.menu-caret{
+.menu-caret {
   margin-left: 1em;
   color: @bgLight;
 }
-.menu-item-label { min-width: 10em }
-
+.menu-item-label {
+  min-width: 10em;
+}
 
 .spinner-backdrop {
   display: flex;
@@ -482,7 +486,7 @@ div.flexlayout__layout{
   left: unset;
 }
 
-#plot > div>div>svg{
+#plot > div > div > svg {
   fill: white;
 }
 
