#170 - subtask - Menu - arrow icon for submenus should be white

--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -468,7 +468,7 @@ div.flexlayout__layout {
 
 .menu-caret {
   margin-left: 1em;
-  color: @bgLight;
+  color: @textColor;
 }
 .menu-item-label {
   min-width: 10em;
