#170 - subtask - Mechs (the gear icons) appear all in a single column

--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -113,6 +113,7 @@ button.actionButton {
 .gearThumbButton {
   width: 120px !important;
   height: 120px !important;
+  float: left;
 }
 .gearThumbButton:hover {
   background-color: inherit !important;
