#170 Styles for instances scroller and Open new json dialog

--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -113,7 +113,6 @@ button.actionButton {
 .gearThumbButton {
   width: 120px !important;
   height: 120px !important;
-  float: left;
 }
 .gearThumbButton:hover {
   background-color: inherit !important;
@@ -501,4 +500,18 @@ div.flexlayout__layout {
 
 .hovered:hover {
   color: @primaryColor;
+}
+
+.dialog-folder-icon {
+  color: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+  height: 24px !important;
+  margin-right: 17px;
+}
+.checkbox-unselected {
+  opacity: 0.5;
+}
+.scroll-instances {
+  max-height: calc(100vh - 208px);
+  overflow-y: auto;
 }
