#170 Hover color on control panel button

--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -51,6 +51,9 @@ body {
 }
 #ControlPanelButton {
   background-color: @bgRegular !important;
+  :hover {
+    color: @secondaryColor !important;
+  }
 }
 button.actionButton {
   font-size: 15px;
