#170 Scroll height update for plot settings

--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -518,3 +518,7 @@ div.flexlayout__layout {
   max-height: calc(100vh - 216px);
   overflow-y: auto;
 }
+.scroll-longer-instances {
+  max-height: calc(100vh - 150px);
+  overflow-y: auto;
+}
