#179 Edit view - replace the question marks, tooltip over the textfields, plus icon in the start

--- a/webapp/css/netpyne.less
+++ b/webapp/css/netpyne.less
@@ -522,3 +522,8 @@ div.flexlayout__layout {
   max-height: calc(100vh - 150px);
   overflow-y: auto;
 }
+.field-start-icon {
+  .MuiFilledInput-root {
+    border-top-left-radius: 0;
+  }
+}
