#180 Menu of top bar, redux action call, update stylings for canvas and buttons

--- a/webapp/css/variables.less
+++ b/webapp/css/variables.less
@@ -1,5 +1,5 @@
-@primaryColor: #EB517A;
-@secondaryColor: #634B7E;
+@primaryColor: #eb517a;
+@secondaryColor: #634b7e;
 
 @bgLighter: #616161;
 @bgLight: #4a4a4a;
@@ -20,3 +20,6 @@
 @font: "Source Sans Pro", sans-serif;
 @inputradius: 30px;
 @tabSpacing: 8px;
+
+@canvasBgDark: #191919;
+@canvasBgLight: white;
